// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioBalance renders without error 1`] = `
<View
  onLayout={[Function]}
>
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
              },
            ]
          }
        >
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
          >
            <Text
              adjustsFontSizeToFit={false}
              allowFontScaling={true}
              maxFontSizeMultiplier={1.2}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#222222",
                    "display": "flex",
                    "fontFamily": "Basel-Book",
                    "fontSize": 53,
                    "fontWeight": "400",
                    "lineHeight": 60,
                    "opacity": 0,
                  },
                ]
              }
            >
              $000.00
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#2222220D",
                  "borderRadius": 4,
                  "bottom": "5%",
                  "display": "flex",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": "5%",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 2,
          "justifyContent": "flex-start",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 16,
          }
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "position": "relative",
                }
              }
            >
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
              >
                <Text
                  allowFontScaling={true}
                  style={
                    {
                      "color": "#7D7D7D",
                      "display": "flex",
                      "fontFamily": "Basel-Book",
                      "fontSize": 19,
                      "lineHeight": 24,
                      "opacity": 0,
                    }
                  }
                  suppressHighlighting={true}
                >
                  $0.00 (0.00)%
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "backgroundColor": "#F9F9F9",
                    "borderBottomLeftRadius": 4,
                    "borderBottomRightRadius": 4,
                    "borderTopLeftRadius": 4,
                    "borderTopRightRadius": 4,
                    "bottom": "5%",
                    "flexDirection": "column",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": "5%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PortfolioBalance renders without error 2`] = `
<View
  onLayout={[Function]}
>
  <View
    sentry-label="Flex"
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      numberOfLines={1}
      style={
        [
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 53,
            "fontWeight": "400",
            "lineHeight": 60,
          },
        ]
      }
    >
      $55
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.2}
        style={
          [
            {
              "color": "#CECECE",
              "display": "flex",
              "fontFamily": "Basel-Book",
              "fontSize": 53,
              "fontWeight": "400",
              "lineHeight": 60,
            },
          ]
        }
      >
        .
        00
      </Text>
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 2,
          "justifyContent": "flex-start",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "color": "#40B66B",
              "height": 20,
              "transform": [
                {
                  "rotate": "180deg",
                },
              ],
              "width": 20,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        tintColor="#40B66B"
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "strokeWidth",
            ]
          }
          strokeWidth="2"
        >
          <RNSVGPath
            d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
            fill={
              {
                "payload": 4282431083,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 16,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#7D7D7D",
              "display": "flex",
              "fontFamily": "Basel-Book",
              "fontSize": 19,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          $5.00 (0.05%)
        </Text>
      </View>
    </View>
  </View>
</View>
`;
